--- a/index.html
+++ b/index.html
@@ -6,42 +6,42 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Montserrat&display=swap" rel="stylesheet">
-    <title>tURSUdor</title>
+    <title>Tudor</title>
 </head>
 <body>
     <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="top cloud">
-    <h1>I'm Ursu</h1>
-    <h2>a <span class="pro">pro</span>grammer</h2>
+    <h1>I'm Tudor</h1>
+    <h2>a <span class="pro">Pro</span>grammer</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="another cloud">
     <img class="mountain" src="images/mountain.png" alt="mountain">
 </div>
 <div class="middle-container">
     <div class="profile">
       <img src="images/dog-walking.png" alt="imagine ursu">
-      <h2>Salut !</h2>
-      <p class="bio-text">I like loooong walks in the park with my hooman</p>
+      <h2>Hi !</h2>
+      <p class="bio-text">I love to implement my creative ideas intro seamless web user interfaces</p>
     </div>
     <hr>
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
         <img class="first-image" src="images/dog.png" alt="first skill image">
-        <h3>Eating, a lot..</h3>
-        <p class="">I just love eating a lot of food when hooman is not home</p>
+        <h3>Hard Skills</h3>
+        <p class="">HTML5, CSS3, SASS, JavaScript, React</p>
       </div>
       <div class="skill-row">
-        <h3 class="eating-again-class">Eating again</h3>
+        <h3 class="eating-again-class">Soft skills</h3>
         <img class="second-image" src="images/dog-bowl.png" alt="second skill image">
       </div>
-        <p class="">crunch crunch crunch..</p>
+        <p class="">Friendly, sociable, eager to learn</p>
       <hr>
       </div>
       <h2>Get In Touch</h2>
     <div class="contact-me">
        <h3>If you wanna know more about me</h3>
       <p>let me know</p>
-      <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+      <a class="btn" href="mailto:tudor.domocos@yahoo.com">CONTACT ME</a>
     </div> 
   </div>
   
@@ -50,7 +50,7 @@
     <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
     <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-    <p class="copyright">© Ursu 2023.</p>
+    <p class="copyright">© Tudor_web 2023.</p>
   </div> 
   
 </body>
