--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </div>
 <div class="middle-container">
     <div class="profile">
-      <img src="images/dog-walking.png" alt="imagine ursu">
+      <img src="images/developer.png" alt="imagine ursu">
       <h2>Hi !</h2>
       <p class="bio-text">I love to implement my creative ideas intro seamless web user interfaces</p>
     </div>
@@ -26,15 +26,15 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="first-image" src="images/dog.png" alt="first skill image">
+        <img class="first-image" src="images/web.png" alt="first skill image">
         <h3>Hard Skills</h3>
         <p class="">HTML5, CSS3, SASS, JavaScript, React</p>
       </div>
-      <div class="skill-row">
+      <div class="skill-row soft-skills">
+        <img class="second-image" src="images/social.png" alt="second skill image">
         <h3 class="eating-again-class">Soft skills</h3>
-        <img class="second-image" src="images/dog-bowl.png" alt="second skill image">
-      </div>
         <p class="">Friendly, sociable, eager to learn</p>
+      </div>
       <hr>
       </div>
       <h2>Get In Touch</h2>
