--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="profile">
       <img src="images/developer.png" alt="imagine ursu">
       <h2>Hi !</h2>
-      <p class="bio-text">I love to implement my creative ideas intro seamless web user interfaces</p>
+      <p class="bio-text">I love to implement my creative ideas into seamless web user interfaces</p>
     </div>
     <hr>
     <div class="skills">
