--- a/index.html
+++ b/index.html
@@ -1,56 +1,67 @@
 <!DOCTYPE html>
+
 <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="favicon.ico">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Montserrat&display=swap" rel="stylesheet">
-    <title>Tudor</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Montserrat&display=swap" rel="stylesheet">
+  <title>Tudor</title>
 </head>
+
 <body>
-    <div class="top-container">
+  <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="top cloud">
     <h1>I'm Tudor</h1>
     <h2>a <span class="pro">Pro</span>grammer</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="another cloud">
     <img class="mountain" src="images/mountain.png" alt="mountain">
-</div>
-<div class="middle-container">
+  </div>
+  <div class="middle-container">
     <div class="profile">
       <img src="images/developer.png" alt="imagine ursu">
       <h2>Hi !</h2>
-      <p class="bio-text">I love to implement my creative ideas into seamless web user interfaces</p>
+      <p class="bio-text">I love to implement my creative ideas into modern websites</p>
     </div>
     <hr>
     <div class="skills">
-      <h2>My Skills.</h2>
-      <div class="skill-row">
+      <h2>My Skills</h2>
+      <div class="skill-row skill-row--1">
         <img class="first-image" src="images/web.png" alt="first skill image">
         <h3>Hard Skills</h3>
-        <p class="">HTML5, CSS3, SASS, JavaScript, React</p>
+        <ul class="hard-skills-list">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>SASS</li>
+          <li>JavaScript</li>
+          <li>React</li>
+        </ul>
       </div>
-      <div class="skill-row soft-skills">
+      <div class="skill-row skill-row--2 soft-skills">
         <img class="second-image" src="images/social.png" alt="second skill image">
-        <h3 class="eating-again-class">Soft skills</h3>
-        <p class="">Friendly, sociable, eager to learn</p>
+        <h3 class="soft-skills-title">Soft skills</h3>
+        <ul class="soft-skills-list">
+          <li>Friendly</li>
+          <li>Sociable</li>
+          <li>Eager to learn</li>
+        </ul>
       </div>
-      <hr>
-      </div>
-      <h2>Get In Touch</h2>
+    </div>
+    <h2>Get In Touch</h2>
     <div class="contact-me">
-       <h3>If you wanna know more about me</h3>
+      <h3>If you wanna know more about me</h3>
       <p>let me know</p>
       <a class="btn" href="mailto:tudor.domocos@yahoo.com">CONTACT ME</a>
-    </div> 
+    </div>
   </div>
-  
-  
+
+
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
     <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
     <p class="copyright">© Tudor_web 2023.</p>
-  </div> 
-  
+  </div>
+
 </body>
